--- a/src/main/webapp/static/css/custom/index.css
+++ b/src/main/webapp/static/css/custom/index.css
@@ -5,7 +5,7 @@
     For .omb_spanOr use @body-bg instead of white.
 */
 body{
-    background: #aaaaaa;
+    background: lightblue;
 }
 
 div.well{
@@ -79,7 +79,7 @@ opacity:0.9;
     width: 2em;
 }
 .omb_login .omb_loginForm  .help-block {
-    color: red;
+    color: lightblue;
 }
 
 
@@ -105,7 +105,6 @@ Inspired by http://dribbble.com/shots/890759-Ui-Kit-Metro/attachments/97174
     box-sizing: border-box;
 }
 body {
-    background: url(http://static1.grsites.com/archive/textures/beige/beige001.jpg);
     text-align: center;
     padding-top: 40px;
 }
@@ -117,16 +116,16 @@ body {
     box-sizing: border-box;         /* Opera/IE 8+ */
 }
 .btn-nav:hover {
-    color: #e92d00;
+    color: lightblue;
     cursor: pointer;
     -webkit-transition: color 1s; /* For Safari 3.1 to 6.0 */
     transition: color 1s;
 }
 .btn-nav.active {
-    color: #e92d00;
+    color: lightskyblue;
     padding: 2px;
-    border-top: 6px solid #e92d00;
-    border-bottom: 6px solid #e92d00;
+    border-top: 6px solid lightskyblue;
+    border-bottom: 6px solid lightskyblue;
     border-left: 0;
     border-right: 0;
     box-sizing:border-box;
@@ -145,7 +144,7 @@ body {
     position: absolute;
     border-style: solid;
     border-width: 6px 6px 0;
-    border-color: #e92d00 transparent;
+    border-color: lightskyblue transparent;
     display: block;
     width: 0;
     z-index: 1;
